--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Recette</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
